2009-11-09  0.26  H.Merijn Brand

    * Adjustments for windows (RT#50544)
    * Mark all non-\w chars illegal in field and table names
    * Fix field types after execute (RT#51090, vgdoqd)

2009-10-15  0.25  H.Merijn Brand

    * Raised minimum perl version to 5.005_03
    * Requires Text::CSV_XS 0.43 (needs eof () method and
      error_diag ()) (RT#33764)
    * Code cleanup (perlcritic, style, layout)
    * Implemented f_ext
    * Implemented f_schema (in DBD::File)
    * Split csv handles for input (no eol default) and
      output (default "\r\n") (RT#33767)
    * Updated info URL's
    * Cleaned up tests
    * Tests now use Test::More
    * Cut down README. No need to be a duplicate module pod
    * Added TODO to documentation
    * Added examples/ from docs
    * Add csv_null
    * Add csv_* to pass to the parser
    * Improved error handling and reporting
    * Table names case sensitiveness
    * Implemented raw_header (RT#44583)

2005-08-10  0.23  Jeff Zucker <jzuckerATcpan.org>

    * fixed bug in automatic column generation, defining
      col_names => [] will auto generate col1, col2, etc.
      thanks for bug report, harleypig on AnnoCPAN

    * added support for multi-character end-of-line separators
      thanks for suggestion, harleypig on AnnoCPAN

2005-04-01  0.22  Jeff Zucker <jzuckerATcpan.org>

    * removed DESTROY and disconnect - use DBD File's instead

    * added ignore_missing_table flag to avoid warnings with
      DROP TABLE IF EXISTS

2004-04-18  0.21  Jeff Zucker <jzuckerATcpan.org>

    * added support for $dbh->{Active}, should now work
      well with Class::DBI and other caching systems

    * added support for DROP TABLE IF EXISTS - doesn't
      complain if table is already dropped

    * removed DBD::File from the distribution - it's now
      distributed with DBI 1.42 and higher

2002-03-01  0.2002  Jeff Zucker <jzuckerATcpan.org>

    * added parser-caching for speedier operation,
      see File.pm prepare()
