@@ -78,7 +78,7 @@ requires:
     perl:                5.005003
     DBI:                 1.00
     DBD::File:           0.37
-    SQL::Statement:      1.22
+    SQL::Statement:      1.23
     Text::CSV_XS:        0.64
 recommends:     
     perl:                5.010001
