@@ -1,8 +1,9 @@
-2009-11-09  0.26  H.Merijn Brand
+2009-11-10  0.26  H.Merijn Brand
 
     * Adjustments for windows (RT#50544)
     * Mark all non-\w chars illegal in field and table names
     * Fix field types after execute (RT#51090, vgdoqd)
+    * Fix for NULL joins. Requires SQL::Statement 1.23 (RT#43010, JBAZIK)
 
 2009-10-15  0.25  H.Merijn Brand
 
